--- a/example/init_eq.gin.mustache
+++ b/example/init_eq.gin.mustache
@@ -21,15 +21,12 @@ cartesian
 morse inter
 C1 core H99 core 0.0037130249   1.7013810915   3.2569847444 0.0 0.0 10.0 
 morse inter
-H1 core H99 core 0.0000411359   1.5679312170   6.6217109293 0.0 0.0 10.0
-morse inter
 C2 core H99 core 0.0035429386   1.6134168443   3.3078041837 0.0 0.0 10.0
 morse inter
-H2 core H99 core 0.0000141329   1.4431784656   7.3699176806 0.0 0.0 10.0
-morse inter
 C3 core H99 core 0.0042052027   1.5744400447   3.3257115368 0.0 0.0 10.0
-morse inter
-H3 core H99 core 0.0000025558   1.4807700103   6.8348610624 0.0 0.0 10.0
+morse inter     
+H99 core H99 core .78706000E-03 1.5000 3.56980  0.0  0.0 10.000
+
 
 species   3
 C      core    0.000000                  
